tests/baselines/reference/classImplementsMergedClassInterface.errors.txt
tests/cases/conformance/classes/classDeclarations/classImplementsMergedClassInterface.ts(9,7): error TS2720: Class 'C2' incorrectly implements class 'C1'. Did you mean to extend 'C1' and inherit its members as a subclass?
  Index signature is missing in type 'C1'.
tests/cases/conformance/classes/classDeclarations/classImplementsMergedClassInterface.ts(12,7): error TS2720: Class 'C3' incorrectly implements class 'C1'. Did you mean to extend 'C1' and inherit its members as a subclass?
  Index signature is missing in type 'C1'.
tests/cases/conformance/classes/classDeclarations/classImplementsMergedClassInterface.ts(16,7): error TS2720: Class 'C4' incorrectly implements class 'C1'. Did you mean to extend 'C1' and inherit its members as a subclass?
  Index signature is missing in type 'C1'.


==== tests/cases/conformance/classes/classDeclarations/classImplementsMergedClassInterface.ts (3 errors) ====
    declare class C1 {
        x : number;
    }
    
    interface C1 {
        y : number;
    }
    
    class C2 implements C1 { // error -- missing x
          ~~
!!! error TS2720: Class 'C2' incorrectly implements class 'C1'. Did you mean to extend 'C1' and inherit its members as a subclass?
!!! error TS2720:   Index signature is missing in type 'C1'.
    }
    
    class C3 implements C1 { // error -- missing y
          ~~
!!! error TS2720: Class 'C3' incorrectly implements class 'C1'. Did you mean to extend 'C1' and inherit its members as a subclass?
!!! error TS2720:   Index signature is missing in type 'C1'.
        x : number;
    }
    
    class C4 implements C1 { // error -- missing x
          ~~
!!! error TS2720: Class 'C4' incorrectly implements class 'C1'. Did you mean to extend 'C1' and inherit its members as a subclass?
!!! error TS2720:   Index signature is missing in type 'C1'.
        y : number;
    }
    
    class C5 implements C1 { // okay
        x : number;
        y : number;
    }